# Design-Pattern

./: .gitignore
Abstract-factory-design/: GUIComponent.h  GUIFactory.cpp  GUIFactory.h  LinuxFactory.h  WindowsFactory.h  main.cpp
Command-Pattern/: main.cpp
Factory-Method/: EmailNotification.h  Notification.h  NotificationFactory.h  PushNotification.h  SMSNotification.h  main.cpp
Flyweight-Pattern/: flyweight_pattern.cpp
Hands-On-Design-Patterns-with-CPP-book/Chapter_01/: 01_cast.cpp  02_dynamic_cast.cpp  CMakeLists.txt
Hands-On-Design-Patterns-with-CPP-book/Chapter_02/: 01_function_template.cpp  02_function_auto.cpp  03_class_template.cpp  04_variable_template.cpp  05_non_type.cpp  06a_consexpr_func.cpp  06b_consteval_func.cpp  06c_consteval_temp.cpp  06d_consteval_temp.cpp  07a_template_template.cpp  09_variadic_fun.cpp  09_variadic_fun2.cpp  10_variadic_class.cpp  12_lambda.cpp  13_lambda_overload14.cpp  13_lambda_overload17.cpp  14a_constraints.cpp  14b_constraints.cpp  15c_concepts.cpp
Hands-On-Design-Patterns-with-CPP-book/Chapter_03/: 01_non_ownership.cpp  02_non_ownership.cpp  03_unique_ptr.cpp  04_factory.cpp  06_shared.cpp
Hands-On-Design-Patterns-with-CPP-book/Chapter_04/: 01a_vector_swap.cpp  01b_list_swap.cpp  02a_swap_copyable.cpp  02b_swap_non_copyable.cpp  02d_swap_non_movable.cpp  03b_swap_rollback.cpp  06b_member_swap_pimpl.cpp  07b_nonmember_swap_func.cpp  (+2 more)
Observer-design-pattern/: main.cpp
Prototype-design-pattern/: main.cpp
Singleton-Pattern/: Logger.h  main.cpp
State-design-pattern/: finite_state_machine.cpp  state_pattern.cpp
(+76 files in other folders)
